Perform some code changes found by SonarLint